--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "name": "example---copy",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "my-react-app/src/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node my-react-app/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
