--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 version: 1
-buildCommand: |
-  cd backend
-  npm install
-  npm run build
-  cd ../my-react-app
-  npm install
-  npm run build
+buildCommand: npm install
+services:
+  - name: backend
+    buildCommand: npm run build
+    startCommand: npm start
+  - name: my-react-app
+    buildCommand: npm run build
+    startCommand: npm start
