--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
-    "build": "cd app && npm run build"
+    "start": "node backend/server.js",
+    "build": "cd my-react-app && npm run build"
   },
   "keywords": [],
   "author": "",
