--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "react-modal": "^3.16.1",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "react-scripts": "^5.0.0"
   },
   "name": "example---copy",
   "version": "1.0.0",
