--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon backend/server.js",
-    "build": "cd my-react-app && npm run build"
+    "build": "cd my-react-app && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
