--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon backend/server.js",
+    "start": "node backend/server.js",
     "build": "cd my-react-app && npm install && npm run build"
   },
   "keywords": [],
