--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "nodemon": "^2.0.12",
+    "nodemon": "^3.0.2"
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
@@ -12,7 +12,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node backend/server.js",
+    "start": "nodemon backend/server.js && react-scripts start",
     "build": "cd my-react-app && npm install && npm run build"
   },
   "keywords": [],
