--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
