--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon backend/server.js && react-scripts start",
-    "build": "cd my-react-app && npm install && npm run build"
+    "build": "cd my-react-app && npm install && npm run build && cd ../backend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
