--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon backend/server.js && react-scripts start",
-    "build": "cd my-react-app && npm install && npm run build && cd ../backend && npm install && npm run build"
+    "start": "node backend/server.js && react-scripts start",
+    "build": "cd my-react-app && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
