--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
-      "build": "npm install concurrently"
+    "build": "npm install concurrently",
+    "start-backend": "node backend/server.js",
+    "start-frontend": "cd my-react-app && npm start"
   },
   "start-backend": "node backend/server.js",
   "start-frontend": "cd my-react-app && npm start",
