--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
     "fs": "^0.0.1-security",
     "react-modal": "^3.16.1",
     "uuidv4": "^6.2.13",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5",
   },
   "name": "example---copy",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
-    "build": "npm install react-router-dom",
+    "build": "npm install concurrently",
     "start-backend": "node backend/server.js",
     "start-frontend": "cd my-react-app && npm start"
   },
