--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "cors": "^2.8.5",
+    "cors": "^2.8.5"
   },
   "name": "example---copy",
   "version": "1.0.0",
