--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5",
+    "path": "^0.12.7"
   },
   "scripts": {
     "start": "react-scripts start",
