--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "cors": "^2.8.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
